Sparating objects by selected vertices in Eevee causes crash #51777

Closed
opened 2017-06-12 01:07:50 +02:00 by Robert Lindner · 5 comments

System Information
Operating system and graphics card
Windows 10 x64, evga geforce gtx 1080

Blender Version
Broken: 2.78, Branch blender2.8, a5b3df7, Date 2017-06-10 00:59 (Visual Studio Build)
Worked: (optional)

Short description of error
When separating selected vertices in eevee, Blender crashes

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • Press P
  • Click on "Selected"

If you do this in a different rendering mode, and the switch to Eevee, Blender also crashes TestSeparateBug.blend

**System Information** Operating system and graphics card Windows 10 x64, evga geforce gtx 1080 **Blender Version** Broken: 2.78, Branch blender2.8, a5b3df7, Date 2017-06-10 00:59 (Visual Studio Build) Worked: (optional) **Short description of error** When separating selected vertices in eevee, Blender crashes **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps - Press P - Click on "Selected" If you do this in a different rendering mode, and the switch to Eevee, Blender also crashes [TestSeparateBug.blend](https://archive.blender.org/developer/F627871/TestSeparateBug.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Illation

Added subscriber: @Illation
Dalai Felinto self-assigned this 2017-06-12 12:44:37 +02:00

This issue was referenced by 47b9d0d040

This issue was referenced by 47b9d0d040300fcd56db20a8a898166d47520bcc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Wow that was fast!

Wow that was fast!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#51777
No description provided.