Better Fix for T51777: Separating objects by selected vertices

This reverts commit 47b9d0d040300fcd56db20a8a898166d47520bcc. And
implement a fix that doesn't require Depsgraph refresh.